--- a/MyFrimversion0.2/styleFrim.css
+++ b/MyFrimversion0.2/styleFrim.css
@@ -4,7 +4,7 @@
 /* AdapMeta: <meta name="viewport" content="width=device-width, initial-scale=1.0">*/
 body{
 	margin:0;
-	font-family: sans-serif;
+	font-family:Comic Sans MS, Comic Sans, cursive;
 }
 
 .margin-0{
