--- a/MyFrimversion0.2/styleFrim.css
+++ b/MyFrimversion0.2/styleFrim.css
@@ -56,7 +56,7 @@ body{
 	background-color:green;
 }
 .bg_blue{
-	background-color:blue;
+	background:blue;
 }
 .bg_yellow{
 	background-color:yellow;
